findToolView should return 0 if there's no active area.

BUG: 271376